--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>IslamMetalWeb</title>
+  <title>Islam Metal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@0ac23ca/css/all.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+<body class="font-gotham text-sm relative">
   <app-root></app-root>
 </body>
 </html>
